<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.tasks.TasksActivity">

    <include
        android:id="@+id/includePanel"
        layout="@layout/top_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/includePanel">

        <LinearLayout
            android:id="@+id/tasksLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/includePanel"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/convertPointBtn"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_coord_task_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inverseTaskBtn"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_inverse_problem_task_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/directTaskBtn"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_direct_problem_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notchTaskBtn"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_notch_task_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/areaTaskBtn"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_area_task_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lengthTaskBtn"
                android:visibility="gone"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_task"
                android:text="@string/str_tasks_activity_convert_length_task_text"
                android:backgroundTint="#5E5E5E"
                android:textColor="@color/white"
                android:layout_height="80dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>