<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.points.CreatePointActivity">

    <include
        android:id="@+id/include9"
        layout="@layout/top_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainInfoSelectedPointLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include9"
        app:layout_constraintBottom_toTopOf="@+id/bottomPanelSelectedPointLayout">

        <TextView
            android:id="@+id/pointNameText"
            style="@style/info_text"
            android:text="@string/str_create_point_activity_info_text" />

        <LinearLayout style="@style/block_text"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/pointNameSelectedPointInput"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:hint="@string/str_create_point_activity_point_name_text"
                android:textColorHint="#BFBFBF"
                style="@style/child_block_text"/>
        </LinearLayout>

        <TextView
            android:id="@+id/coordTypeText"
            android:layout_marginTop="2dp"
            style="@style/info_text"
            android:text="@string/str_create_point_activity_format_type_text" />

        <LinearLayout style="@style/block_text"
            android:layout_marginTop="2dp">

            <Spinner
                android:id="@+id/formatTypeSpinner"
                style="@style/child_block_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/coordinatesText"
            android:layout_marginTop="2dp"
            style="@style/info_text"
            android:text="@string/str_create_point_activity_coord_values_text" />

        <LinearLayout style="@style/block_text"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/firstCoordSelectedPointInput"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:hint="X"
                android:textColorHint="#BFBFBF"
                style="@style/child_block_text"/>
        </LinearLayout>

        <LinearLayout style="@style/block_text"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/secondCoordSelectedPointInput"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:hint="Y"
                android:textColorHint="#BFBFBF"
                style="@style/child_block_text"/>
        </LinearLayout>

        <LinearLayout style="@style/block_text"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/thirdCoordSelectedPointInput"
                style="@style/child_block_text"
                android:hint="Z"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:singleLine="true"
                android:textColorHint="#BFBFBF" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanelSelectedPointLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/savePointDatabaseBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/str_create_point_activity_save_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>