<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CoordSystemActivity">

    <include
        android:id="@+id/include9"
        layout="@layout/top_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/block_text"
        android:id="@+id/searchField"
        android:layout_marginTop="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include9">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8F8F8F"
            android:hint="@string/str_coord_system_activity_search_hint_text"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnerPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField"
        android:orientation="vertical">

        <TextView
            android:id="@+id/systemsTypeText"
            android:layout_marginTop="5dp"
            style="@style/info_text"
            android:text="@string/str_coord_system_activity_type_info_text" />

        <Spinner
            android:id="@+id/typeSpinner"
            style="@style/block_text_spinner"
            android:layout_height="0dp"
            android:layout_marginTop="5sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/recyclersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPanel">

        <TextView
            android:id="@+id/systemsListText"
            style="@style/info_text"
            android:text="@string/str_coord_system_activity_list_info_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartSystemsRecyclerView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scrollbars="none" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/geodesSystemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scrollbars="none" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>